@@ -1,10 +1,7 @@
 AUX fix-run-on-ac-bat.patch 1481 SHA256 ee316777bebb36783eb9ec2c3d151a17383eb98b529990cc0e5eb4927f1d8c30 SHA512 7ccd05b0a5360e40458959c599a341bf7b45a850f3b6994820e9e723fe8435c84dd754491fcc433e032002e1e55f1442ca7a650949adbb50414e18cc47f1e1a6 WHIRLPOOL 8167c3cabb16564d8fadb6b8eeaec9963bc9cbbb4cfdd02dcae6ad020015238a37d016ceed15e805d3aafa76abc8523c1baa68fafa5b1c5f0da9f708629f8850
-<<<<<<< HEAD
-=======
 AUX pm-blacklist.0 354 SHA256 0b2ca4b40e26a20db9e04909efcd3b1f3f18ca09f018f9e4646eafa5973e2f48 SHA512 e4e02f3e1b1b93ae94c2e4bbad1e8449ab929e9f41a489315df1e79c8888500928ebcd138d87f2fb0bcaa90a6acb40c6c3df418e576894039c11298f106032de WHIRLPOOL a390eef0bb88329788720bde971cbd0bb6b5f1bc2d066165a9ca01bc7ae017ff7226f432f7c948b7ee2ff33db8b1561aefe65afd82c6a517265b90361cb3815a
 AUX tlp-init.openrc 499 SHA256 432428177e4ef4de32120e4b465313bab25e7722d9afcfb36a86b0f6ca218680 SHA512 213dc8ddd0bfd424700e179d5d22aae1832a623e220dcee9f7d38481f12ef36fe315b1273af755a4ff538a404d66d2830db5aa9e48829b8d0aaa7c0c725ba2c0 WHIRLPOOL 7f3e44424442fbf3a4b710a10c52eeda4b0a0963cfb16479213450fc3590132e542e99e45a670fc5dcf73c99a37cfd6aed3af563e2ce9c894dc810863da0c5f0
 DIST tlp-0.5.tar.gz 56149 SHA256 e535e53c340a1af2ea72f0de8a2ffbfc5f832a4e29c391a4052ab1d783c5c157 SHA512 937f65816722e11d7ccaa667ccb471252d54913f0b29a05d88e266535ff5e157eab86f573a590286647a6b321c923be830603e760a7414bce463faa65cb3fd81 WHIRLPOOL f8b1a7b4e96cd7af8a81ecd17c9389a3ae37d83b16c0b13f890e000837a64edf8962dea073425e34dcf3be9507f2103acea5f7e8ac8cd5331193fc036515880f
->>>>>>> 6e6aecd... add app-laptop/tlp-{0.5-r2,9999}
 DIST tlp-gentoo-additions-0.4.tar.bz2 6005 SHA256 2a88298350a2f6238ec7e2d12518f89940a54916dd5beff202a2514ce01a61d4 SHA512 4105232c4844e14d7d35464575d2a36ce87cc40b2b3c112e9435ab2b1d811062fb1a02b44cc5abd183d4a87ede9d711f6d0308d142b58e8c508714874c233be1 WHIRLPOOL 4c81da249a7325c41ccf56a7db9214fa5562665800f469341be5b5566ae0af3c306420ad526d20e38105d9992eb73285d4c80c494e2e0f014fb5c7d9c6e3afd3
 DIST tlp-gentoo-additions-0.5-r1.tar.bz2 2907 SHA256 740f1b41a62fef3411bb30883e6226c0e8909efda04f969a603ffa0a1f631d5f SHA512 0afadf04499c7ab707923e08cbb61d226c38b61b3375b5a8c21efe4225207219057ef8838718190045f1dbfee08a2bf13e3af6f8e42f8fcf56a9856d20f5a2d2 WHIRLPOOL 75c11ea8b2b761b1174c4bcb76913ebdaf488afc9565e698c6efd760a0e2eba74c092ed9043a05f5050829468dc03ecfe3e747077b5c2b6dbadeb74b47b9e809
 DIST tlp-gentoo-additions-0.5.tar.bz2 2494 SHA256 5511afd48173014375f46fdf5652faf3926f789091017f458ff892f307e87018 SHA512 c634c374ed0f552723ae09681cf670d649c75d62097cd72eef8a4bd240f7efeb803f10ab6feedeae81742cbeebd1aef265a1ed917bda6de1bb38cc47ce58c983 WHIRLPOOL 57dfb12c44249fabe836302e48a0ce6b75d9e007ae8d3164cef2b8622ffbffee951b1460aa7bdaed9cbc3f7e85229dce0f1edb72b1c161ec7c939b97d4f3cc71
@@ -13,11 +10,8 @@ EBUILD tlp-0.4-r1.ebuild 6379 SHA256 3b25dd526f38530cbdad1fbc2b04cbf7200aef5de5f
 EBUILD tlp-0.4.1.ebuild 6340 SHA256 35b05318ef7b3bac6ce6f4a195bd903a6d40debfac1b20bd2db67d1357b45c56 SHA512 64e4ab8674531acde122d633d4743283fcf5b1861d56a8d5356a570e52bae591fd033bd50136660b5cc89d0553532365a1e1577235fb90ebe42bad6ebfc02ddd WHIRLPOOL d99c8f56a895c0f98fec32f0d27353111a2ea38846881c91f47189c442357475b7d5930e70b0e6026a234323d1acac979ff2d63c9ff730cb5f66372ee08d8579
 EBUILD tlp-0.4.ebuild 5837 SHA256 ce9bb9fd43023fe360f3821cbd48062b56e2cdc748d1bcbb392e6b0baad0626e SHA512 ec101176557fb9bd849523d32f589d1aeadf33d5d527ec18e5c773a6deb04e31e328c917294588fae7edc0276cbcc6e447bc0da0464251fa3e38979647b6bdb6 WHIRLPOOL 95518bd05acef1319aef51b3b03ed89b912c3325a13c54f7247a3a4ed38def1196b6ba73038ed1b9c6aa0272d4944925abe6da36b40beb79654f801b56998706
 EBUILD tlp-0.5-r1.ebuild 4719 SHA256 f3486c4049dc5e794c8e66a917a3477ec269c5a39519637e2dd9e6acbc25fe08 SHA512 3af8b40687700aee1568bfaa75f70eb24b4d93a60cd1bebd6ce51b18449d18c2b625bf956c2cb9de68e73c84c847dcb5eaf64bad54ee1b39e3022f6245c25bca WHIRLPOOL 2b79d0fee5ebe86ad334bf4f134249b611bc246d0ddb36de71ba072903f8630244a1a0c1327f82af614c08cbef59fc9713cedeb5d699865482702d2010dd257b
-<<<<<<< HEAD
-=======
-EBUILD tlp-0.5-r2.ebuild 5183 SHA256 84ec86d08a15938c211435862e0411251e5cc81227f7491e8110a025a783ab3b SHA512 6e7d790430da0e71157d89b77c604f817272cd5cf82256ed793ea9fc2058d1489d0fb3988cb96012291256bdccd1d34ce1bae6e0c8139b8c1bce36b93a9e6ae8 WHIRLPOOL 5c17bff3fea1fd063779ba62df9494a60c386ebd868c2721ccbb7a6662d7718d0fda01b70b871992cdf879e42bdbe06ebdc7e9109f20af3bdeac4b261ff70b9e
->>>>>>> 6e6aecd... add app-laptop/tlp-{0.5-r2,9999}
+EBUILD tlp-0.5-r2.ebuild 5180 SHA256 28df4bdbe8f5ef985c6bf2e5b218a381e4d366f85a7967ec31aab33cdba721d8 SHA512 327b2834d6ac50aa7ac73158264c43122941a68098fe3b5e069a35c12cb9e8c8ac78823006295ae9b9d404689c2d2c5d01ca773909c28f340930a50e0fae489e WHIRLPOOL 4acf2f387b9b85f3c5becb365d684f355ffeae480a6f78c84a09ac24d096008544590992290e92cd9ad113bfb76feddc5aad72e403cd84ba41a7c7c3450aa71e
 EBUILD tlp-0.5.ebuild 4322 SHA256 8d92d603adaafd810d4b48d7aade4aa678a5e88f6a4eae43e271e1c7ccb6e18f SHA512 9d53e830c792350b44cf6987fb3a9c73fc0de65ebb472357ba6302e01f700e4c5658eefad8ea2e28d68ff52c5896052cb3469b4208371b7b83a7088be1fc17c6 WHIRLPOOL 1bc12403333b32ac19dec7ff0f193779ccab588a8b4d2dd748eec505e2033dddf2ea5e86407745cea7089af4b706d07a1deaca4ac5e7707e50378115ed2d1ad0
-EBUILD tlp-9999.ebuild 5765 SHA256 cc9676aeaaa752cc69700bb8d339c517d065797091f5f3d58a0bd152a743008f SHA512 cc5392224f20346fd9f8ed62fc29aff6bb56506c11d6a59850e0c6b424f3461002cffac057e0a4daddf36f0a2287f6ea36fe12a71dc7783a99afd81b0008674e WHIRLPOOL 33bcfff690cea3bcc566a18260a2512d930b8eb0196438de4c0e05746f99621d57fb95c686ffc651570d7e344338deb0aa00fcf64fc649e46df68e2af91a49b1
-MISC ChangeLog 9655 SHA256 ebb66368d837e503651297733f27006f39fce92bf5909dcf4f51a330f1451a48 SHA512 08d6f5998d710e10a5ee6f56d3a2d0d4619bab17c16ae9bf70fca099c3ed06b2227c6c02a22e56a0099fad62903e945ea0f94654337ed483f2cf039ee7c205d4 WHIRLPOOL a2024564e1e418d3131c80d10e222c3daa8e674ab89e2b9a9d4f9c58927a7711234a37ab5bfb05a19735eab9b1bba97e90d8130a56062b8116428454ef5dfba7
+EBUILD tlp-9999.ebuild 5710 SHA256 9ba15a1d7e66e2c597cc42adc3a1867be56bfb20199c84d747e9d04f6d9ef0d6 SHA512 165eb0b8ad2f305538f02efd0060c687cccf9aa132dd91f4174b9ca3e96a484889c2b24c020115222afa37956c5c6aa8d3c2fa8fcd9ac0a27eb1908d98bcff21 WHIRLPOOL 514304e31f48f5911815b46fef3254f7c91b2aaa7f277534c4332baf0789dcdc3236163c39a375a47de97c685be49e3bb6ad719fa375e39f4814c6b42193c345
+MISC ChangeLog 9968 SHA256 1db0b762f2741b8ad0f212b5aeab03d987f8a9e89ecb598157825cc90b02d8bc SHA512 8b4ee38fcbe702e8103791c2dc3d6c4dad2aa22fcec5e60a77c79dc84f20d2973515059b0b36fda5fd4ca8502f6d427a9f65021cd5d706e05017e25634259f12 WHIRLPOOL d06e3fdd417732c0b27d2c18b752028579e350f278839b0bbe0937a8a6bdae328d4ae69e2b7e789486c6ac7f8fcd65a4ab6f6106546d2e6edda318c910e3312a
 MISC metadata.xml 2089 SHA256 1e283f1d356f8c38c0f95a16bf3dc7a769834d7a0d9ba9986c327917afc1cfb6 SHA512 e5cd0ca0f6d16c601f83755ac0ef9d509aa454a802c867a4550631130754c719bb1de36ce2f3283ab8bf4ca9177358260d7d7005a15fcaa64a580e681fc7229b WHIRLPOOL 64f5fd3213fa0552d8b5128a06a78e60c04111b50bacbff57dbaa1a92e2a47f51858dc5f6cd6735c5f0be61ab6c10d8c4c9ae7872bc21a4f6e34d14c03edfacc
