@@ -2,6 +2,14 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild
+  - use $MY_CONFFILE in pkg_preinst()
+  - use TLP_WITH_SYSTEMD
+
+  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.5-r2.ebuild
+  - don't hardcode /etc/tlp.conf in pkg_preinst(), use $MY_CONFFILE instead
+  - "fix" comment regarding RESTRICT=mirror
+
 *tlp-9999 (15 Sep 2014)
 *tlp-0.5-r2 (15 Sep 2014)
 
